  bios/sd.c bios/sd.h bios/spi.c bios/spi.h bios/xhdi.c: Add support
  for SD/MMC cards on FireBee. (RFB)
- bios/ide.c bios/ide.h bios/xhdi.c: Code cleanup: use ioctl model
  for miscellaneous IDE routines. (RFB)
- desk/desktop.def desk/desktop.rsc: Reverted previous FBOXTEXT change
  which caused display problems. (RFB)

2013-11-28
- bios/acsi.c bios/acsi.h bios/xhdi.c: Code cleanup: use ioctl model
  for miscellaneous ACSI routines. (RFB)

2013-12-07
- bdos/fs.h bdos/fsfat.c bdos/fsio.c bdos/fsopnclo.c: Handle all valid
  DOS FAT end-of-chain markers (in case file/folder was written on
  another system). (RFB)

2013-12-10
- bdos/fsio.c: Code cleanup: rewrote ixlseek() for greater simplicity and
  added many explanatory comments. (RFB)
- bdos/bdosmain.c bdos/fsbuf.c bdos/fsdir.c bdos/fsdrive.c bdos/fsio.c
  bdos/iumem.c bdos/kpgmld.c bdos/proc.c bdos/umem.c: Code cleanup: use
  KDEBUG() for debugging statements. (RFB)

2013-12-11
- bios/ide.c: Added missing IDE features/error register on M548x. (VRI)
- bios/ide.c: Fix potential bug: use LONG instead of WORD for timeout
  values. (RFB)

2013-12-15
- bios/bios.c bios/coldfire.c bios/coldfire.h: Added poweroff support on the
  FireBee. (VRI)
- bios/ide.c: Set a maximum of two IDE interfaces for FireBee. (RFB)
- bios/bios.c: Fixed implicit declaration of firebee_shutdown(). (RFB)

2013-12-24
- bios/linea.S bios/lineavars.S vdi/vdi_defs.h vdi/vdi_line.c vdi/vdi_raster.c:
  Added support for "Copy raster form". Contributed by Eero Tamminen. (VRI)

2013-12-31
- bios/ide.c: Disable IDE multi-sector i/o (causes problems with some
  CF cards). (RFB)

2014-01-01
- aes/gemgsxif.c aes/gsx2.c aes/gsx2.h Makefile: Converted gsx2.S to C, and
  added d2/a2 to the VDI trap clobber list. This makes EmuTOS compatible
  with fVDI's v_hide_c() and v_show_c() which clobbers d2. (VRI)
- *: Replaced asm by __asm__, inline by __inline__ and __volatile__ to volatile
  to be more compliant with the standards. (VRI)